--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -7,16 +7,19 @@
 </head>
 <body>
 
-  <h1>Bienvenido</h1>
-  <p>Seleccione un Evento: </p>
+  <h1>Lista de eventos</h1>
+  
   <div id="lista-eventos">
     <!-- <a href="Baile.html">Baile</a>
     <a href="prueba.html">Trova</a> -->
 
   </div>
+
   <form id="jsonform" method="POST" style="display:none;">
     <input type="hidden" name="data" id="jsonData">
   </form>
+
+  <button type="button" id="agregarEvento"> Agregar Evento </button>
 
   <script src="js/index.js"></script>
 
