--- a/src/main/resources/public/Eventos.html
+++ b/src/main/resources/public/Eventos.html
@@ -1,64 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Formulario de Evento</title>
-    <link rel = "stylesheet" href="css/eventos.css">
-</head>
-<body>
-    <form id = "nuevo-evento" method="post">
-        <h2>Nuevo Evento</h2>
-        <!-- Campo Nombre del Evento -->
-        <div class="nombre">
-            <label>Nombre del Evento:</label>
-            <input type="text" id="nombre"placeholder="Escribe el nombre del evento" required autocomplete="off">
-        </div>
-        
-        <!-- Campo Fecha -->
-        <div class="fecha">
-            <label>Fecha:</label>
-            <input type="date" id="fecha" required autocomplete="off">
-        </div>
-        
-        <div class = "tipo">
-            <button type="button" id="Trova">Trova</button>
-            <button type="button" id="General">Baile</button>
-            <button type="button" id="Baile">General</button>
-        </div>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Formulario de Evento</title>
+        <link rel = "stylesheet" href="css/eventos.css">
+    </head>
+    <body>
+        <form id = "nuevo-evento" method="post">
+            <h2>Nuevo Evento</h2>
+            <!-- Campo Nombre del Evento -->
+            <div class="nombre">
+                <label>Nombre del Evento:</label>
+                <input type="text" id="nombre"placeholder="Escribe el nombre del evento" required autocomplete="off">
+            </div>
 
-        <div class = "evento trova">
-            <div class="zona"> Zona Vip </div>
-            <div class="precio"> <span style="font-weight: bold;">$</span> <input type="number" name="VIP" placeholder="000" ></div>
-            <div class="zona"> Zona Preferente </div>
-            <div class="precio"> <span style="font-weight: bold;">$</span> <input type="number" name="Preferente" placeholder="000"></div>
-            <div class="zona"> Zona General </div>
-            <div class="precio"> <span style="font-weight: bold;">$</span> <input type="number" name="General" placeholder="000"></div>
-            <div class="zona"> Zona Laterales </div>
-            <div class="precio"> <span style="font-weight: bold;">$</span> <input type="number" name="Laterales" placeholder="000"></div>
-        </div>
+            <!-- Campo Fecha -->
+            <div class="fecha">
+                <label>Fecha:</label>
+                <input type="date" id="fecha" required autocomplete="off">
+            </div>
 
-        <div class = "evento general">
-            <div class="zona"> Zona Vip </div>
-            <div class="precio"> <span style="font-weight: bold;">$</span> <input type="number" name="VIP" placeholder="000"></div>
-            <div class="zona"> Zona Preferente </div>
-            <div class="precio"> <span style="font-weight: bold;">$</span> <input type="number" name="Preferente" placeholder="000"></div>
-            <div class="zona"> Zona General </div>
-            <div class="precio"> <span style="font-weight: bold;">$</span> <input type="number" name="General" placeholder="000"></div>
-        </div>
+            <div class = "tipo">
+                <button type="button" id="Trova">Trova</button>
+                <button type="button"  id="General">Baile</button>
+                <button type="button"  hidden id="Baile">General</button>
+            </div>
 
-        <div class = "evento baile">
-            <div class="zona"> Pista </div>
-            <div class="precio"> <span style="font-weight: bold;">$</span> <input type="number" name="Pista" placeholder="000"></div>
-            <div class="zona"> Laterales </div>
-            <div class="precio"> <span style="font-weight: bold;">$</span> <input type="number" name="Laterales" placeholder="000"></div>
-        </div>
+            <div class = "evento trova">
+                <div class="zona"> Zona Vip </div>
+                <div class="precio"> <span style="font-weight: bold;">$</span> <input type="number" name="VIP" placeholder="000" ></div>
+                <div class="zona"> Zona Preferente </div>
+                <div class="precio"> <span style="font-weight: bold;">$</span> <input type="number" name="Preferente" placeholder="000"></div>
+                <div class="zona"> Zona General </div>
+                <div class="precio"> <span style="font-weight: bold;">$</span> <input type="number" name="General" placeholder="000"></div>
+                <div class="zona"> Zona Laterales </div>
+                <div class="precio"> <span style="font-weight: bold;">$</span> <input type="number" name="Laterales" placeholder="000"></div>
+            </div>
 
-        <!-- Botón de Envío -->
-        <button type="submit" id="Agregar">Agregar</button>
-    </form>
-    <button type="button" id="inicio">Ir a lista de eventos</button>
-    <script src="js/eventos.js"></script>
-</body>
+            <div class = "evento general">
+                <div class="zona"> Zona Vip </div>
+                <div class="precio"> <span style="font-weight: bold;">$</span> <input type="number" name="VIP" placeholder="000"></div>
+                <div class="zona"> Zona Preferente </div>
+                <div class="precio"> <span style="font-weight: bold;">$</span> <input type="number" name="Preferente" placeholder="000"></div>
+                <div class="zona"> Zona General </div>
+                <div class="precio"> <span style="font-weight: bold;">$</span> <input type="number" name="General" placeholder="000"></div>
+            </div>
+
+            <div class = "evento baile">
+                <div class="zona"> Pista </div>
+                <div class="precio"> <span style="font-weight: bold;">$</span> <input type="number" name="Pista" placeholder="000"></div>
+                <div class="zona"> Laterales </div>
+                <div class="precio"> <span style="font-weight: bold;">$</span> <input type="number" name="Laterales" placeholder="000"></div>
+            </div>
+
+            <!-- Botón de Envío -->
+            <button type="submit" id="Agregar">Agregar</button>
+        </form>
+        <button type="button" id="inicio">Ir a lista de eventos</button>
+        <script src="js/eventos.js"></script>
+    </body>
 </html>
 
